--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trial",
+  "name": "personal-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a repository that I created to help others develop their websites in React.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,19 +13,28 @@
     "postinstall": "webpack",
     "heroku-postbuild": "webpack -p"
   },
-  "author": "",
+  "author": "develop4learners",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
-    "webpack": "^3.4.1"
-  }
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "webpack": "^3.12.0"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/develop4learners/PersonalSite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/develop4learners/PersonalSite/issues"
+  },
+  "homepage": "https://github.com/develop4learners/PersonalSite#readme"
 }
